2003-03-06    <karl@gnu.org>

	* info/session.c (nearest_xref): new fn.
	(info_menu_or_ref_item): call it when we are
	searching for xrefs, instead of just looking on
	the current line.  
	* info/info-utils.c (info_copy_reference): new fn.
	* info/info-utils.h (info_copy_reference): declare.
	Bug report from: rich@phekda.freeserve.co.uk,
	04 Mar 2003 17:51:47 +0000.

	* */.gdbinit: set env MALLOC_CHECK_.

	2003-03-06  Ralph Schleicher  <rs@nunatak.allgaeu.org>
	* makeinfo/files.h (get_file_info_in_path): Declare function.
	* makeinfo/files.c (get_file_info_in_path): Remove static keyword.
	* makeinfo/makeinfo.c (cm_image): Lookup image file name in the
	search path for include files.

2003-03-05    <karl@gnu.org>

	* makeinfo/makeinfo.c (insert_toplevel_subdirectory): always make
	subdirectory for html. Before, if the current directory happened
	to be named `foo' and the @setfilename was foo.info, we would
	write the split html files into the current directory.  Reported
	by rich@phekda.freeserve.co.uk, 01 Mar 2003 12:03:13 +0000.

	* makeinfo/files.c (filename_part): simplify assignment.

2003-02-24    <karl@gnu.org>

	* makeinfo/insertion.c (get_item_function): check for @item in
	argument to @itemize.  Report from: Dumas Patrice
	<dumas@centre-cired.fr>, 24 Feb 2003 13:13:52 +0100.

	* makeinfo/makeinfo.c (remember_brace): say `braces' instead of
	`{...}', since often we don't actually expect text inside the
	braces.

2003-02-21    <karl@gnu.org>

	* aclocal.m4: automake 1.7.3.

2003-02-19    <karl@gnu.org>

	* doc/info-stnd.texi: omit all node pointers.
	
2003-02-18    <karl@gnu.org>

	* util/texindex.c (maketempname): use already-set `tempdir' instead
	of half-redoing the logic.
	(concat): only need two args, not three; change callers.
	(perror_with_name): really call perror, putting
	the name first a la gcc.
	(pfatal_with_name): call perror_with_name.

	* util/texi2dvi (get_xref_files): a file whose first line is